[package]
name = "cardium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
derive_more = "0.99.17"
hex = { version = "0.4.3", features = ["serde"] }
k256 = { version = "0.13.2", features = ["serde"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
thiserror = "1.0.50"
url = { version = "2.5.0", features = ["serde"] }
